--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,12 @@
       {
         "aria-valid-attr-value": "off"
       }
+    ],
+    "axe/parsing": [
+      "default",
+      {
+        "duplicate-id-aria": "off"
+      }
     ]
   }
 }
