landing page UI in progress

--- a/.hintrc
+++ b/.hintrc
@@ -2,7 +2,10 @@
   "extends": [
     "development"
   ],
-  "hints": {
-    
-  }
+  "hints": {},
+  "browserslist": [
+    "defaults",
+    "not ie 11",
+    "not samsung <= 25"
+  ]
 }
