--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.77.6"
+    "sass": "^1.77.6",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
