--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@tanstack/react-query": "^5.45.1",
     "@tanstack/react-query-devtools": "^5.45.1",
     "axios": "^1.7.2",
+    "formik": "^2.4.6",
     "geist": "^1.3.0",
     "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.6",
-    "swiper": "^11.1.4"
+    "swiper": "^11.1.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
