--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettierrc": "prettier --write ."
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@next/third-parties": "^14.2.4",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.45.1",
@@ -19,6 +20,7 @@
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "geist": "^1.3.0",
+    "gsap": "^3.12.5",
     "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
