--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "prepare": "husky install",
-    "dev": "next dev -p 2407",
-    "start": "next start -p 2407",
+    "dev": "next dev",
+    "start": "next start",
     "build": "next build",
     "lint": "next lint",
     "prettierrc": "prettier --write ."
